--- a/templates/lab_app/login.html
+++ b/templates/lab_app/login.html
@@ -2,38 +2,34 @@
 {% load static %}
 
 {% block content %}
-<div class="container login_form">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card shadow-lg border-0 rounded-lg">
-                <div class="card-header bg-primary text-white text-center">
-                    <h4>Login</h4>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    </form>
-                </div>
-                {% comment %} <div class="card-footer">
-                    {% if messages %}
-                        <ul class="list-unstyled">
-                            {% for message in messages %}
-                                <li class="alert alert-info">{{ message }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                </div> {% endcomment %}
-            </div>
+<div class="d-flex justify-content-center align-items-start min-vh-100 bg-gradient-primary" style="padding-top: 50px;">
+    <div class="card shadow-lg rounded-3" style="max-width: 400px; width: 100%;">
+        <div class="card-header bg-primary text-white text-center rounded-top">
+            <h4>Login</h4>
         </div>
+        <div class="card-body p-5">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary btn-block mt-3">Login</button>
+            </form>
+        </div>
+        {% comment %}
+        <div class="card-footer">
+            {% if messages %}
+                <ul class="list-unstyled">
+                    {% for message in messages %}
+                        <li class="alert alert-info">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        {% endcomment %}
     </div>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+<style>
+    
+</style>
+
 {% endblock content %}
