--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <header>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top mask-custom shadow-0">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'lab_app:home_page_view' %}">
                 <span style="color: #5e9693;">Research</span><span style="color: #18EF74;">Lab</span>
@@ -13,10 +13,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:home_page_view' %}">Home</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:home_page_view' %}">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle fw-bold text-warning" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             People
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -29,30 +29,40 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:publication_list' %}">Publications</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:publication_list' %}">Publications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="#">News & Events</a>
+                        <a class="nav-link fw-bold text-warning" href="#">News & Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url "lab_app:about" %}">About</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url "lab_app:about" %}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:central_contact' %}">Contact</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:central_contact' %}">Contact</a>
                     </li>
                     {% if user.is_authenticated and user.is_superuser %}
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:banner_image_upload' %}">Lab Image</a></li>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:banner_image_upload' %}">Lab Image</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:add_category' %}">Add Category</a></li>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:signup' %}">Signup</a>
+                    </li>
+                    {% comment %} <li class="nav-item">
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:add_category' %}">Add Category</a>
+                    </li> {% url 'lab_app:user_profile' %} {% endcomment %}
                     {% endif %}
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:logout' %}">Logout</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" href="{% url 'lab_app:login' %}">Login</a>
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:login' %}">Login</a>
+                    </li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold text-warning" href="{% url 'lab_app:view_profile' %}">Profile</a>
                     </li>
                     {% endif %}
                 </ul>
