--- a/templates/lab_app/people_detail.html
+++ b/templates/lab_app/people_detail.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-
 <div class="text-center bg-warning m-5 p-4">         
     <div class="d-flex justify-content-center mt-2 text-decoration-none">
         <div class="m-3">
@@ -33,22 +32,21 @@
         </div>
     </div>
 
-    <div class="col-md-6">
-        <h2>Biography</h2>
-        <p class="text-justify-custom">{{ profile.biography }}</p>
-        <div>
-            <a target="_blank" href="{{ profile.google_scholar }}">
-                <p class="text-justify-custom">Google Scholar: {{ profile.google_scholar }}</p>
+    <div class="col-12 col-md-6">
+        <h2 class="text-white mb-3 p-1">Biography</h2>
+        <p class="text-white text-justify-custom mb-3 biography-text">{{ profile.biography }}</p>
+        <div class="mb-3">
+            <a target="_blank" href="{{ profile.google_scholar }}" class="text-white d-block biography-text">
+                <p>Google Scholar: {{ profile.google_scholar }}</p>
             </a>
-            <a target="_blank" href="{{ profile.research_gate }}">
-                <p class="text-justify-custom">Research Gate: {{ profile.research_gate }}</p>
+            <a target="_blank" href="{{ profile.research_gate }}" class="text-white d-block biography-text">
+                <p>Research Gate: {{ profile.research_gate }}</p>
             </a>
         </div>
-        
     </div>
 
     <div class="col-md-3">
-        <h2 class="text-primary">Research Interests</h2>
+        <h2 class="text-white">Research Interests</h2>
         <ul class="list-group list-group-flush shadow-sm">
             {% for interest in research_interests %}
                 <li class="list-group-item d-flex align-items-center">
