add change password functionality

--- a/templates/lab_app/view_profile.html
+++ b/templates/lab_app/view_profile.html
@@ -30,6 +30,7 @@
                     <a href="{% url 'lab_app:view_publications' %}" class="btn btn-primary mt-3">Publications List</a>
                     <a href="{% url 'lab_app:add_education' %}" class="btn btn-primary mt-3">Add Education</a>
                     <a href="{% url 'lab_app:view_education' %}" class="btn btn-primary mt-3">Education List</a>
+                    <a href="{% url 'lab_app:change_password' %}" class="btn btn-primary mt-3">Change Password</a>
                 </div>
             </div>
         </div>
