--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,10 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  {% block extra_scripts %}
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  {% endblock %}
+
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-TtrEwJl/xQSP5yjb9qLlyZLfFFoF1c25BzZRPzmGzjdmkED67nvR0Ds1/DyH3ZnT" crossorigin="anonymous"></script>
