--- a/templates/lab_app/view_profile.html
+++ b/templates/lab_app/view_profile.html
@@ -30,6 +30,14 @@
                     <a href="{% url 'lab_app:view_publications' %}" class="btn btn-primary mt-3">Publications List</a>
                     <a href="{% url 'lab_app:add_education' %}" class="btn btn-primary mt-3">Add Education</a>
                     <a href="{% url 'lab_app:view_education' %}" class="btn btn-primary mt-3">Education List</a>
+                    <a href="{% url 'lab_app:add_project' %}" class="btn btn-primary mt-3">Add Project</a>
+                    <a href="{% url 'lab_app:project_list' %}" class="btn btn-primary mt-3">Project List</a>
+                    <a href="{% url 'lab_app:add_contact' %}" class="btn btn-primary mt-3">Add Contact</a>
+                    <a href="{% url 'lab_app:view_contacts' %}" class="btn btn-primary mt-3">Contact List</a>
+                    <a href="{% url 'lab_app:add_research' %}" class="btn btn-primary mt-3">Add Research</a>
+                    <a href="{% url 'lab_app:view_research' %}" class="btn btn-primary mt-3">Research List</a>
+                    <a href="{% url 'lab_app:add_research_interest' %}" class="btn btn-primary mt-3">Add Research Interest</a>
+                    <a href="{% url 'lab_app:view_research_interests' %}" class="btn btn-primary mt-3">Research Interest List</a>
                     <a href="{% url 'lab_app:change_password' %}" class="btn btn-primary mt-3">Change Password</a>
                 </div>
             </div>
