--- a/templates/lab_app/about.html
+++ b/templates/lab_app/about.html
@@ -1,28 +1,31 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-
-<div class="about-container">
-    <div class="about-image">
-        {% if about.about_image %}
-            <img src="{{ about.about_image.url }}" alt="About Image">
-        {% else %}
-            <img src="https://via.placeholder.com/400" alt="Default About Image">
-        {% endif %}
-    </div>
-    <div class="about-text">
-        <h1 class="about-heading">About Us</h1>
-        <p class="about-paragraph">{{ about.about1 }}</p>
-        <p class="about-paragraph">{{ about.about2 }}</p>
-        <p class="about-paragraph">{{ about.about3 }}</p>
-        <p class="about-paragraph">{{ about.about4 }}</p>
-        <p class="about-paragraph">{{ about.about5 }}</p>
-        <p class="about-paragraph">{{ about.about6 }}</p>
-        <p class="about-paragraph">{{ about.about7 }}</p>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+<br>
+<div class="container mt-5">
+    <div class="row align-items-center">
+        <div class="col-lg-6 col-md-12 mb-4">
+            {% if about.about_image %}
+                <img src="{{ about.about_image.url }}" alt="About Image" class="img-fluid rounded shadow">
+            {% else %}
+                <img src="https://via.placeholder.com/400" alt="Default About Image" class="img-fluid rounded shadow">
+            {% endif %}
+        </div>
+        <div class="col-lg-6 col-md-12">
+            <h3 class="display-4 text-primary text-white">About Us</h3>
+            <hr class="my-4">
+            <p class="lead text-white">{{ about.about1 }}</p>
+            <p class="text-white">{{ about.about2 }}</p>
+            <p class="text-white">{{ about.about3 }}</p>
+            <p class="text-white">{{ about.about4 }}</p>
+            <p class="text-white">{{ about.about5 }}</p>
+            <p class="text-white">{{ about.about6 }}</p>
+            <p class="text-white">{{ about.about7 }}</p>
+            <div class="social-icons mt-4">
+                <a href="#" class="text-primary me-3"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-primary me-3"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
     </div>
 </div>
