--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<br>
+<style>
+
+
+</style>
+
+<!-- Hero Section -->
+<header class="hero-section">
+    <div class="overlay">
+        <div class="container text-center">
+            <h2>welcome to</h2>
+            <h1>JASHORE UNIVERSITY OF SCIENCE AND TECHNOLOGY</h1>
+            <h3>যশোর বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</h3>
+            <a href="#" class="cta-button">CLICK HERE TO SIGNUP FOR REGULAR ALUMNI MEMBER</a>
+        </div>
+    </div>
+</header>
   <!-- Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <!-- Indicators/dots -->
