change carousel design

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,7 @@
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name="Master's Students" %}">Master's</a></li>
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='PhD Students' %}">PhD</a></li>
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='M Fill Students' %}">M Fill</a></li>
+                            <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='Ex-Student' %}">Ex-Student</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
