--- a/static/css/style.css
+++ b/static/css/style.css
@@ -374,8 +374,12 @@ h2.text-primary {
 /* Carousel image design */
 .carousel-item img {
   width: 100%;
-  height: 100%px;
-  object-fit: cover;
+  height: 50vh;
+  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
 }
 
 @media (max-width: 768px) {
