--- a/templates/lab_app/dashboard.html
+++ b/templates/lab_app/dashboard.html
@@ -43,6 +43,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4">
+            <div class="card text-center text-white bg-info mb-3 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Contact Info</h5>
+                    <p class="card-text">show contact info.</p>
+                    <a href="{% url 'lab_app:contact_us_details' %}" class="btn btn-light">Go to Contact Info</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <br>
