--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,9 +35,12 @@
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-warning {% if request.resolver_match.url_name == 'about' %}active{% endif %}" href="{% url 'lab_app:about' %}">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-warning {% if request.resolver_match.url_name == 'central_contact' %}active{% endif %}" href="{% url 'lab_app:central_contact' %}">Contact</a>
-                    </li>
+                    {% if not user.is_authenticated and not user.is_superuser %}
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold text-warning {% if request.resolver_match.url_name == 'central_contact' %}active{% endif %}" href="{% url 'lab_app:central_contact' %}">Contact</a>
+                        </li>
+                    {% endif %}
+
                     {% if user.is_authenticated and user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-warning {% if request.resolver_match.url_name == 'bashboard' %}active{% endif %}" href="{% url 'lab_app:bashboard' %}">Dashboard</a>
