--- a/templates/lab_app/dashboard.html
+++ b/templates/lab_app/dashboard.html
@@ -53,6 +53,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4">
+            <div class="card text-center text-white bg-secondary mb-3 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Go to Gallery</h5>
+                    <p class="card-text">show contact info.</p>
+                    <a href="{% url 'lab_app:upload_images' %}" class="btn btn-light">Add Gallery Images</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <br>
