--- a/templates/lab_app/research_detail.html
+++ b/templates/lab_app/research_detail.html
@@ -11,7 +11,7 @@
             <h2 class="text-primary">{{ research.title }}</h2>
             <p class="text-secondary">{{ research.project_description }}</p>
             <div class="mt-4">
-                <!-- <p><strong>Start Date:</strong> {{ research.stat_date }}</p>
+                <!-- <p><strong>Start Date:</strong> {{ research.start_date }}</p>
                 <p><strong>End Date:</strong> {{ research.end_date }}</p>
                 <p><strong>Department:</strong> {{ research.department }}</p>
                 <p><strong>Funding Authority:</strong> {{ research.funding_authority }}</p> -->
@@ -21,18 +21,25 @@
         <div class="col-md-4">
             <div class="p-3 bg-warning rounded">
                 <h4 class="text-black-50 fw-bold">More <span class="text-black">Projects</span></h4>
-                <ul class="list-unstyled">
-                    {% for p in related_research %}
-                    <li class="mb-3">
-                        <div class="d-flex align-items-center">
-                            <img src="{{ p.project_image.url }}" alt="{{ p.title }}" class="img-thumbnail" style="width: 60px; height: 60px; object-fit: cover;">
-                            <div class="ms-3">
-                                <a href="{% url 'lab_app:research_detail' p.id %}" class="text-decoration-none text-dark">{{ p.title|truncatewords:6 }}</a>
+                {% if related_research %}
+                    <ul class="list-unstyled">
+                        {% for p in related_research %}
+                        <li class="mb-3">
+                            <div class="d-flex align-items-center">
+                                <img src="{{ p.project_image.url }}" alt="{{ p.title }}" class="img-thumbnail" style="width: 60px; height: 60px; object-fit: cover;">
+                                <div class="ms-3">
+                                    <a href="{% url 'lab_app:research_detail' p.id %}" class="text-decoration-none text-dark">{{ p.title|truncatewords:6 }}</a>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    {% endfor %}
-                </ul>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <div class="alert alert-info text-center">
+                        <h4 class="alert-heading">No Related Research Found</h4>
+                        <p>Sorry, there are no other research projects by this author.</p>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
