--- a/templates/lab_app/upload_images.html
+++ b/templates/lab_app/upload_images.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5"><br>
     <h1 class="text-center mb-4">Upload Images</h1>
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -11,7 +11,7 @@
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="image">Choose Images</label>
+                            <label for="image">Choose one or multiple Images</label>
                             <input type="file" id="image" name="image" multiple class="form-control">
                         </div>
                         <button type="submit" class="btn btn-primary mt-3">Upload</button>
@@ -21,4 +21,17 @@
         </div>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock content %}
