--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% load static %}
 
 <!-- Hero Section -->
 <header class="hero-section">
@@ -12,6 +13,24 @@
         </div>
     </div>
 </header>
+
+<div class="container mt-5 mb-5">
+    <div class="row">
+        <div class="col-12 col-md-6 d-flex flex-column flex-md-row align-items-md-center">
+            <img class="img-fluid border border-warning rounded-3 mb-3 mb-md-0" src="{% static 'images/Nazmul Sir1.jpg' %}" alt="" style="max-width: 100%; height: auto; max-height: 400px; object-fit: cover;">
+            <p class="text-justify-custom text-white ms-md-3 mb-0">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, sequi sed. Laborum dignissimos harum laboriosam amet nobis corporis sint velit exercitationem, fugiat, nisi quis? Natus provident labore minima harum iusto asperiores beatae voluptatum totam explicabo quaerat dicta consectetur ducimus autem, cupiditate ea eius sit quam nisi ipsam. Sed eaque est eveniet et, possimus nihil! Nemo eius magni possimus laborum soluta nihil laudantium praesentium, non repellendus blanditiis, accusamus aut vero reprehenderit ut corrupti eaque quia odit exercitationem beatae neque recusandae ducimus rerum repudiandae! Eveniet libero ipsam expedita ipsum quos, quaerat, corporis quam deleniti corrupti molestias ex eaque reprehenderit earum. Quo, quae!
+            </p>
+        </div>
+        <div class="col-12 col-md-6">
+            <p class="text-white text-center">Somethings</p>
+        </div>
+    </div>
+</div>
+
+
+
+
   <!-- Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <!-- Indicators/dots -->
